--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   multicast_dns: ^0.3.2
   flutter_bloc: ^8.0.1
+  singleton: ^0.0.2
 
 dev_dependencies:
   flutter_test:
